# endpoint-sentinel-x

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  README.md  ROADMAP.md  SECURITY_NOTES.md  diff_output.txt
agent/: Dockerfile  enroll.py  inventory_sync.py  main.py  pyproject.toml
agent/api/: heartbeat.py  inventory.py
agent/app/: README.md
agent/cache/: README.md
agent/collectors/: README.md  hardware.py  local_users.py  network.py  operating_system.py  performance.py  security.py  services.py  software.py  storage.py  windows_updates.py
agent/commands/: README.md  base.py  inventory.py  process.py  registry.py  service.py  system.py
agent/communication/: README.md  command_dispatcher.py  websocket_client.py
agent/config/: README.md  settings.py
agent/models/: inventory.py
agent/services/: README.md
agent/tests/: test_hardware_collector.py  test_inventory_api.py  test_inventory_api_network.py  test_inventory_api_os.py  test_inventory_api_security.py  test_local_users_collector.py  test_network_collector.py  test_os_collector.py  test_security_collector.py  test_services_collector.py  test_software_collector.py  test_storage_collector.py  test_windows_updates_collector.py
agent/tests/commands/: test_service.py
agent/utils/: README.md  hashing.py  powershell.py  serialization.py
backend/: Dockerfile  alembic.ini  check_agent.py  check_heartbeat.py  check_inventory.py  check_perf_history.py  check_token.py  pyproject.toml  pytest_output.txt  pytest_output2.txt  seed_db.py  truncate_db.py  update_token.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/application/: README.md
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: agent.py  auth.py  database.py
backend/app/domain/: README.md
backend/app/infrastructure/: README.md
backend/app/models/: README.md  role.py
backend/app/repositories/: README.md  command.py  organization.py  policy.py  user.py
backend/app/schemas/: README.md  agent.py  auth.py  command.py  dashboard.py  endpoint.py  health.py  inventory.py  organization.py  policy.py  security.py  user.py  ws.py
backend/app/services/: README.md  command.py  dashboard.py  dispatcher.py  endpoint.py  organization.py  policy.py  security.py  user.py
backend/tests/: conftest.py  test_agent_api.py  test_auth_api.py  test_health.py  test_inventory_api.py  test_policies_api.py  test_security.py
backend/tests/services/: test_dispatcher.py  test_policy_service.py
docs/api/: README.md
shared/: README.md  __init__.py  pyproject.toml
shared/constants/: README.md  __init__.py  ws_events.py
shared/events/: README.md
shared/schemas/: README.md
shared/types/: README.md
(+186 files in other folders)
