[project]
name = "endpoint-sentinel-agent"
version = "0.1.0"
description = "Windows Python Service Agent for Endpoint Sentinel X"
dependencies = [
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "psutil>=5.9.8",
]
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 (line too long) is suppressed for collector modules because they embed
# PowerShell scripts as string literals; wrapping those lines would break the PS syntax.
[tool.ruff.lint.per-file-ignores]
"collectors/*.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
